gap fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@ body {
     grid-template: auto 1fr auto / 1fr auto ;
     height: 100vh;
     font-family: 'Vend Sans', sans-serif;
+    min-width: 600px;
 }
 header {
     grid-column: 1/4;
@@ -10,6 +11,11 @@ header {
     background: rgb(96, 108, 56);
     color: white;
     font-weight: 300;
+    
+}
+span {
+    display: grid;
+    place-items: center;
     
 }
 .navigation {
@@ -29,18 +35,51 @@ header {
     flex:1 1 auto;
     padding: 10px;
 }
-
+.navigation a:hover {
+    background: rgb(96, 108, 56);
+}
 main {
-    grid-column: 1/2;
+    grid-column: 1/4;
     background: rgb(188, 108, 37);
+    display: grid;
+    grid-template: 1fr/ 1fr;
+    margin: 0px;
+    max-height: fit-content;
+    column-gap: clamp(1rem, 3vw, 2rem);
+    
+} /*trying to fix the center of main*/
+main h1 {
+    max-height: fit-content;
+    padding: 0%;
+    margin: 20px;
+}
+section {
+    
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
 }
 
-.card {
-    grid-column: 3/4;
+.card1{
+    grid-column: 1/2;
+    background: rgb(221,161,94);
+}
+.card1 img{
+    padding:20px;
+    background:rgb(96, 108, 56);
+    border-radius: 10px;
+    border:rgb(40, 54, 24); 
+    border-style: solid;
+}
+
+.card2{
+    grid-column: 2/3;
     background: rgb(221,161,94);
 }
 footer {
     grid-column: 1/4;
     background: rgb(96, 108, 56);
     color: white;
+    display: grid;
+    place-items: center;
 }
